--- a/be/package.json
+++ b/be/package.json
@@ -5,17 +5,21 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npx nodemon server.js"
   },
   "author": "dncuong",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1"
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.21"
   }
 }
