--- a/be/package.json
+++ b/be/package.json
@@ -10,11 +10,14 @@
   "author": "dncuong",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-validator": "^6.15.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
